--- a/templates/book.html
+++ b/templates/book.html
@@ -29,6 +29,8 @@
         <form action="/book/{{ book.id }}" method="post">
             <div class="form-group">
                 <input class="form-control" type="text" name="review" placeholder="Write Your Review">
+            </div>
+            <div class="form-group">
                 <button class="btn btn-primary" type="submit">Submit Review</button>
             </div>
         </form>
