--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,9 @@
 {% block body %}
     <form action="/" method="POST">
         <div class="form-group">
-            <input class="form-control" name="query" type="text" palceholder="Search Books">
+            <input class="form-control" autofocus name="query" type="text" palceholder="Search Books">
+        </div>
+        <div class="form-group">
             <button class="btn btn-primary" type="submit">Search</button>
         </div>
     </form>
