--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,11 +2,34 @@
 <html>
     <head>
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-      <link rel="stylesheet" href="static/styles.css">
+      <link rel="stylesheet" href="{{ url_for('index') }}static/styles.css">
       <title>{% block title %}{% endblock %}</title>
     </head>
     <body>
-      <div class="container">
+      <div class="siteHeader" style="background-color:#7FB67B;">
+          <a href="/login"><img class="center" src="{{ url_for('index') }}static/images/10.jpg"></a>
+      </div>
+      <!-- NAV MENU -->
+      <nav class="navbar navbar-expand-md navbar-light bg-light border">
+            <a class="navbar-brand" href="/"><span class="blue">CS50 Books</span></a>
+            <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbar">
+                {% if session.user_id %}
+                    <ul class="navbar-nav ml-auto mt-2">
+                        <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
+                    </ul>
+                {% else %}
+                    <ul class="navbar-nav ml-auto mt-2">
+                        <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
+                    </ul>
+                {% endif %}
+            </div>
+      </nav>
+      <!-- END OF NAV MENU -->
+      <div class="container p-5">
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
                 {% for category, message in messages %}
@@ -21,6 +44,6 @@
         {% endwith %}
         {% block body %}
         {% endblock %}
-      </div>    
+      </div>
     </body>
 </html>
